# EyePipe

./: CMakeLists.txt  main.cpp
include/: eye_detail.hpp  eye_functional.hpp  eye_pipe_from.hpp  eye_pipe_pair.hpp  eype_pipe_fork_into.hpp  functional.hpp  mapping.hpp
